calcif2
~~~~~~~
Version 2.2.0
* Post DiFX-2.1

Version 2.1.0
* Name change from DiFX-2.0.2
* Version for DiFX-2.1, May 4, 2012

Version 2.0.2
* Post DiFX-2.0.1
* Feature to augment output model with additional tabulated delays
* Infrastructure to populate az, el and parallactic angle added; only az works so far

Version 2.0.1
* Post version 2.0
* Some cleanup, valgrind compliance, improved error messages, improved use of difxio constants
* Version for DiFX-2.0.1, June 10, 2011

Version 2.0
* Writes im files only (no delay/uvw/rate) and allows multi-phase centre
* Warn when NaN or Inf delays are made
* difxsniff: Retain extra digit in amplitude column
* Requires difxio 3.0
* Version for DiFX-2.0.0

Version 1.1
* Fix bug: didn't respect polynomial order/increment from command line
* Version for DiFX-1.5.1

Version 1.0
* Add one extra MC row at end of job to quash AIPS warning
* Always wrap at 86400 seconds into day
* Version for DiFX-1.5

Version 0.2
* by default zero negative delays
* don't include atmosphere in UVW calculation
* respect DIFX_GROUP_ID and set permissions

Version 0.1
* complete rewrite of calcif.  Differences from calcif:
  - generates polynomial model by default
  - corrects for aberration by default
  - allows any mount type
  - much improved integration with difxio library

getjobs
~~~~~~~
Version 1.1
* copy log file
Version 1.2
* warn about case sensitive and don't make directory if not found
* respect DIFX_GROUP_ID and set permissions

* Removed from project for version 2.0.1

joblist
~~~~~~~
Version 1.4
* More help info
* For NRAO-DiFX 1.1

Version 1.3
* Support full generic format types

Version 1.2
* Initial version

job2difx
~~~~~~~~
* Removed from project for version 2.0.1

Version 1.11
* Post NRAO-DiFX 1.1

Version 1.10
* more complete removal of old files if ovewrwriting previous job2difx run
* put DIFX VERSION in .calc file
* merge .flag file rows when possible
* fix bin ordering for pulsars.  Still something awry here.